--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -68,7 +68,8 @@ resources:
   requests:
     cpu: 500m
     memory: 512Mi
-hpa: 
+hpa:
+  enabled: false
   CpuAverageUtilization: 60
   maxReplicas: 3
 elastic_search:
