--- a/charts/forms-flow-forms/templates/hpa.yaml
+++ b/charts/forms-flow-forms/templates/hpa.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.hpa.enabled}}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
@@ -16,3 +17,4 @@ spec:
         target:
           type: Utilization
           averageUtilization: {{.Values.hpa.CpuAverageUtilization}}
+{{- end}}
