--- a/charts/forms-flow-ai/Chart.yaml
+++ b/charts/forms-flow-ai/Chart.yaml
@@ -10,5 +10,7 @@ dependencies:
     condition: mongodb.enabled 
     repository: https://charts.bitnami.com/bitnami
     version: 13.6.3
-version: v5.0.0
+  - name: redis-exporter
+    version: v3.0.0
+version: v6.0.0
 icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
