--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -221,3 +221,17 @@ postgresql-ha:
     portName: postgresql
     nodePorts:
       postgresql: ""
+redis-expoter:
+  exporter:
+    replica: 2
+  redis:
+    configMap:
+      redis_conf: |
+        cluster-enabled no
+        cluster-require-full-coverage no
+        cluster-node-timeout 15000
+        cluster-config-file /data/nodes.conf
+        cluster-migration-barrier 1
+        appendonly no
+        protected-mode no
+        maxmemory 1449551462
