--- a/charts/forms-flow-admin/values.yaml
+++ b/charts/forms-flow-admin/values.yaml
@@ -34,3 +34,5 @@ image:
   registry: docker.io
   repository: formsflow/forms-flow-ai-admin
   tag: v5.3.0 #The image tag to pull from
+elastic_search:
+  enabled: false
