--- a/charts/forms-flow-ai/charts/redis-exporter/templates/configmap.yaml
+++ b/charts/forms-flow-ai/charts/redis-exporter/templates/configmap.yaml
@@ -1,14 +1,6 @@
 apiVersion: v1
 data:
-  redis.conf: |
-    cluster-enabled no
-    cluster-require-full-coverage no
-    cluster-node-timeout 15000
-    cluster-config-file /data/nodes.conf
-    cluster-migration-barrier 1
-    appendonly no
-    protected-mode no
-    maxmemory 1449551462
+  redis.conf: {{ .Values.redis.configMap.redis_conf | quote }}
   update-node.sh: |
     #!/bin/sh
     CLUSTER_CONFIG="/data/nodes.conf"
