--- a/charts/forms-flow-forms/templates/deployment.yaml
+++ b/charts/forms-flow-forms/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       {{- if .Values.elastic_search.enabled }} 
-      - name: filebeat-api
+      - name: filebeat-forms
         image: docker.elastic.co/beats/filebeat:7.14.0
         env:
           - name: ELASTIC_SERVER
