--- a/charts/forms-flow-ai/templates/secret.yaml
+++ b/charts/forms-flow-ai/templates/secret.yaml
@@ -15,6 +15,10 @@ stringData:
   ADMIN_WEB_CLIENTID: {{ index .Values "forms-flow-web" "clientid"}}
   INSIGHT_API_KEY:  "{{.Values.insight_api_key}}"
   REDIS_PASSCODE: "{{.Values.redis_pass_code}}"
+  IPAAS_EMBEDDED_API_KEY: "{{ .Values.ipaas.embedded_api_key }}"
+  IPAAS_JWT_PRIVATE_KEY: "{{ .Values.ipaas.jwt_private_key }}"
+  IPAAS_EMBED_BASE_URL: "{{ .Values.ipaas.embed_base_url }}"
+  IPAAS_API_BASE_URL: "{{ .Values.ipaas.api_base_url }}"
 ---
 apiVersion: v1
 kind: Secret
