--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -62,5 +62,6 @@ data:
         "ENABLE_APPLICATIONS_MODULE": "${ENABLE_APPLICATIONS_MODULE}",
         "REACT_APP_ENABLE_CHATBOT": "${REACT_APP_ENABLE_CHATBOT}",
         "REACT_APP_CHATBOT_URL": "${REACT_APP_CHATBOT_URL}",
-        "REACT_APP_ENABLE_LOW_CODE_DESIGNER": "${ENABLE_LOW_CODE_DESIGNER}"
+        "REACT_APP_ENABLE_LOW_CODE_DESIGNER": "${ENABLE_LOW_CODE_DESIGNER}",
+        "REACT_APP_KEYCLOAK_URL_HTTP_RELATIVE_PATH": "${KEYCLOAK_URL_HTTP_RELATIVE_PATH}"
       }
