--- a/charts/forms-flow-web/templates/deployment.yaml
+++ b/charts/forms-flow-web/templates/deployment.yaml
@@ -187,6 +187,12 @@ spec:
             configMapKeyRef:
               key: ENABLE_APPLICATIONS_MODULE
               name: "{{ .Chart.Name }}"
+        - name: KEYCLOAK_URL_HTTP_RELATIVE_PATH
+          valueFrom:
+            configMapKeyRef:
+              key: KEYCLOAK_URL_HTTP_RELATIVE_PATH
+              name: "{{ .Values.formsflow.configmap }}"
+
         image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         lifecycle:
           postStart:
