--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -38,7 +38,8 @@ forms-flow-idm:
   keycloak:
     ingress:
       hostname: forms-flow-idm-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
-  realm: forms-flow-ai    
+  realm: forms-flow-ai
+  context-path: /auth
 
 forms-flow-web:
   clientid: forms-flow-web
