--- a/charts/forms-flow-data-analysis/templates/deployment.yaml
+++ b/charts/forms-flow-data-analysis/templates/deployment.yaml
@@ -123,6 +123,11 @@ spec:
             configMapKeyRef:
               key: MODEL_ID
               name: "{{ .Values.formsflow.configmap }}"
+        - name: KEYCLOAK_URL_HTTP_RELATIVE_PATH
+          valueFrom:
+            configMapKeyRef:
+              key: KEYCLOAK_URL_HTTP_RELATIVE_PATH
+              name: "{{ .Values.formsflow.configmap }}"
 
         image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         name: "{{ .Chart.Name }}"
