--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -1,5 +1,4 @@
-Domain: #<DEFINE_ME>
-
+Domain: formsflow.ai
 database:
   username: postgres 
   password: postgres
@@ -45,7 +44,7 @@ redash:
   image:
     registry: docker.io #registry to use
     repository: formsflow/redash # repoisitory for redash image  
-    tag: 10.1.5 # tag of image being used
+    tag: 24.04.0 # tag of image being used
   database:
     password: postgres # admin password
     url: "postgresql://postgres:postgres@forms-flow-analytics-postgresql:5432/postgres" # redash database url - i.e forms-flow-analytics-postgresql
