--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -51,15 +51,30 @@ ingress:
   extraTls:
    - {}
 mail:
+  protocol: smtp
   from: "<DEFINE_ME>"
   password: "<DEFINE_ME>"
   user: "<DEFINE_ME>"
+  alias: DoNotReply
+  folder: INBOX
   smtp:
     auth: true
     port: 5432
     server: "<DEFINE_ME>"
+    socketFactory:
+      port: 465
+      class: javax.net.ssl.SSLSocketFactory
     ssl:
       enable: false
+  store:
+    protocol: imaps
+  imaps:
+    host: imap.gmail.com
+    port: 993
+    timeout: 1000
+  attachment:
+    download: true
+    path: attachments
 
 resources:
   limits:
