--- a/charts/forms-flow-analytics/templates/deployment.yaml
+++ b/charts/forms-flow-analytics/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
     app: "{{ .Chart.Name }}-server"
   name: "{{ .Chart.Name }}-server"
 spec:
-  replicas: 1
+  replicas: 1 
   selector:
     matchLabels:
       app: "{{ .Chart.Name }}-server"
@@ -31,16 +31,16 @@ spec:
         env:
         - name: REDASH_WEB_WORKERS
           value: "4"
-        - name: GUNICORN_CMD_ARGS
-          value: "--timeout 300"
+        - name: REDASH_GUNICORN_TIMEOUT
+          value: "300"
         - name: REDASH_MULTI_ORG
           value: "{{ .Values.redash.multiorg}}"
         image: "{{ .Values.redash.image.registry}}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}"
         imagePullPolicy: Always
-        lifecycle:
-          postStart:
-            exec:
-              command: ["/bin/sh", "-c", "python -v ./manage.py database create_tables"]
+        # lifecycle:
+        #  postStart:
+        #    exec:
+        #      command: ["/bin/sh", "-c", "python -v ./manage.py database create_tables"]
         name: "{{ .Chart.Name }}-server"
         ports:
         - containerPort: {{ int .Values.ingress.port }}
