Temporarily expose server service via LoadBalancer

--- a/charts/forms-flow-analytics/templates/service.yaml
+++ b/charts/forms-flow-analytics/templates/service.yaml
@@ -5,6 +5,7 @@ metadata:
     app: {{ .Chart.Name }}
   name: {{ .Chart.Name }}
 spec:
+  type: LoadBalancer
   ports:
   - name: "{{.Values.ingress.port}}"
     port: {{.Values.ingress.port}}
