--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -2,7 +2,7 @@ Domain: localhost
 database:
   username: postgres 
   password: postgres
-  servicename: forms-flow-ai-postgresql-ha-pgpool
+  servicename: forms-flow-ai-postgresql-ha-pgpool-service
   port: 5432
   url: "postgresql://{{.Values.database.username}}:{{.Values.database.password}}@{{.Values.database.servicename}}:{{.Values.database.port}}/{{.Chart.Name}}"
 
@@ -44,8 +44,8 @@ redash:
     repository: formsflow/redash # repoisitory for redash image  
     tag: 24.04.0 # tag of image being used
   database:
-    password: postgres # admin password
-    url: "postgresql://postgres:postgres@forms-flow-analytics-postgresql:5432/postgres" # redash database url - i.e forms-flow-analytics-postgresql
+    password: "{{ .Values.database.password }}"
+    url: "postgresql://{{ .Values.database.username }}:{{ .Values.database.password }}@{{ .Values.database.servicename }}:5432/postgres"
   readinessProbe:
     httpGet:
       path: /status
