Added forms-flow configmap and secret references in forms-flow-ai chart deployment

--- a/charts/forms-flow-analytics/templates/server-deployment.yaml
+++ b/charts/forms-flow-analytics/templates/server-deployment.yaml
@@ -29,6 +29,26 @@ spec:
             - secretRef:
                 name: '{{ .Chart.Name }}' # default redash environment variables
           env:
+            - name: DATABASE_NAME
+              valueFrom:
+                configMapKeyRef:
+                  key: DATABASE_NAME
+                  name: '{{ .Values.formsflow.configmap }}'
+            - name: DATABASE_PORT
+              valueFrom:
+                configMapKeyRef:
+                  key: DATABASE_PORT
+                  name: '{{ .Values.formsflow.configmap }}'
+            - name: DATABASE_SERVICE_NAME
+              valueFrom:
+                configMapKeyRef:
+                  key: DATABASE_SERVICE_NAME
+                  name: '{{ .Values.formsflow.configmap }}'
+            - name: DATABASE_URL
+              valueFrom:
+                configMapKeyRef:
+                  key: DATABASE_URL
+                  name: '{{ .Chart.Name}}'
             - name: REDASH_WEB_WORKERS
               value: '4'
             - name: REDASH_GUNICORN_TIMEOUT
